kubernetes/zitadel/base/postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zitadel-app
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: zitadel
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: zitadel
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zitadel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: zitadel
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zitadel-postgres
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: zitadel
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: zitadel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zitadel
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: zitadel
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zitadel
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: zitadel
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-truenas-egress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: zitadel
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: zitadel
  egress:
    - to:
        - ipBlock:
            cidr: 10.101.1.6/32
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgdump-ingress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: zitadel
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: zitadel
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: pgdump-cron
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zitadel
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zitadel
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/cluster: zitadel
      ports:
        - port: 5432
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-ingress
  namespace: zitadel
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: zitadel
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/cluster: zitadel
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              postgres-operator.crunchydata.com/pgadmin: pgadmin
      ports:
        - protocol: TCP
          port: 5432
